--- a/front-end/.env
+++ b/front-end/.env
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=3666
+REACT_APP_APP_URL=http://6038d9e2e9f7.ngrok.io
 REACT_APP_API_URL=http://localhost:8666
+REACT_APP_ENTITY_URL=http://localhost:8667
