front update style

--- a/back-end/scheduler/src/main/resources/application.properties
+++ b/back-end/scheduler/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8668
 appMode=local
-baseHost=http://localhost:3666
+baseHost=http://70bf08a21dee.ngrok.io
 spring.data.mongodb.database=request-shorter
