--- a/back-end/front-api/src/main/resources/application.properties
+++ b/back-end/front-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8666
 appMode=local
-baseHost=http://localhost:3666
+baseHost=http://70bf08a21dee.ngrok.io
 spring.data.mongodb.database=request-shorter
 spring.data.mongodb.auto-index-creation=true
