--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -23,7 +23,9 @@ jobs:
             node-version: [15.x]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1 
+      - uses: actions/setup-node@v1
+        with:
+            node-version: '15'
       - name: Setup front
         working-directory: ${{env.working-front-dir}}
         run: yarn
