add gae database

--- a/back-end/entity-api/src/main/resources/application.properties
+++ b/back-end/entity-api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8667
 appMode=local
 baseHost=http://70bf08a21dee.ngrok.io
+geoLiteCountryDataBase=D:\\GeoLite2-Country\\GeoLite2-Country.mmdb
+geoLiteCityDataBase=D:\\GeoLite2-City\\GeoLite2-City.mmdb
 spring.data.mongodb.database=request-shorter
