--- a/infrastructure/deploy/docker-compose-prod.yml
+++ b/infrastructure/deploy/docker-compose-prod.yml
@@ -22,10 +22,13 @@ services:
     restart: unless-stopped
     volumes:
       - ./java/entity-api-0.0.1-SNAPSHOT.jar:/gjava/java.jar
+      - ./GeoLite2:/gjava/GeoLite2
     environment:
       appMode: prod
       baseHost: https://slink.sbs
       spring_data_mongodb_host: mongodb
+      geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
+      geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/bash -c "chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
     ports:
       - "127.0.0.1:1103:8667"
@@ -42,10 +45,13 @@ services:
     restart: unless-stopped
     volumes:
        - ./java/front-api-0.0.1-SNAPSHOT.jar:/gjava/java.jar
+       - ./GeoLite2:/gjava/GeoLite2
     environment:
       appMode: prod
       baseHost: https://slink.sbs
       spring_data_mongodb_host: mongodb
+      geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
+      geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/bash -c "chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
     ports:
       - "127.0.0.1:1102:8666"
@@ -62,10 +68,13 @@ services:
     restart: unless-stopped
     volumes:
       - ./java/scheduler-0.0.1-SNAPSHOT.jar:/gjava/java.jar
+      - ./GeoLite2:/gjava/GeoLite2
     environment:
       appMode: prod
       baseHost: https://slink.sbs
       spring_data_mongodb_host: mongodb
+      geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
+      geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/bash -c "chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
     logging:
       driver: "json-file"
