--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -56,6 +56,8 @@ jobs:
         run: ./gradlew scheduler:bootJar
       - name: Move libs file
         run: mv ./back-end/build/libs/*.jar ./infrastructure/deploy/java/
+      - name: Move GeoLite2 file
+        run: mv ./infrastructure/GeoLite2/ ./infrastructure/deploy/GeoLite2/
       - name: Copy on machine
         uses: easingthemes/ssh-deploy@v2.1.5
       - name: Make PROD directory
@@ -110,7 +112,25 @@ jobs:
 #           port: ${{ secrets.DEPLOY_PORT }}
 #           username: ${{ secrets.DEPLOY_USER }}
 #           passphrase: ''
-#           privateKey: ${{ secrets.DEPLOY_KEY}} 
+#           privateKey: ${{ secrets.DEPLOY_KEY}}
+      - name: Replace GeoLite2 [1/2]
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: mkdir -p /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/GeoLite2/
+          host: ${{ secrets.DEPLOY_HOST }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          username: ${{ secrets.DEPLOY_USER }}
+          passphrase: ''
+          privateKey: ${{ secrets.DEPLOY_KEY}}     
+      - name: Replace GeoLite2 [2/2]
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: cp -rf /root/app/deploy-${{env.MODE}}/GeoLite2/* /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/GeoLite2/
+          host: ${{ secrets.DEPLOY_HOST }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          username: ${{ secrets.DEPLOY_USER }}
+          passphrase: ''
+          privateKey: ${{ secrets.DEPLOY_KEY}}  
       - name: Replace front [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
