--- a/back-end/front-api/src/main/resources/application.properties
+++ b/back-end/front-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8666
 appMode=local
-baseHost=http://70bf08a21dee.ngrok.io
-geoLiteCountryDataBase=D:\\GeoLite2-Country\\GeoLite2-Country.mmdb
-geoLiteCityDataBase=D:\\GeoLite2-City\\GeoLite2-City.mmdb
+baseHost=https://ebe49819ba85.ngrok.io
+geoLiteCountryDataBase=D:\\GeoLite2\\GeoLite2-Country\\GeoLite2-Country.mmdb
+geoLiteCityDataBase=D:\\GeoLite2\\GeoLite2-City\\GeoLite2-City.mmdb
 spring.data.mongodb.database=request-shorter
 spring.data.mongodb.auto-index-creation=true
