--- a/front-end/.env
+++ b/front-end/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3666
-REACT_APP_APP_URL=https://slink.sbs
+REACT_APP_APP_URL=https://ebe49819ba85.ngrok.io
 REACT_APP_API_URL=http://localhost:8666
 REACT_APP_ENTITY_URL=http://localhost:8667
