--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Request shorter app",
-  "name": "Request shorter app",
+  "short_name": "Link shorter",
+  "name": "Link shorter, fast and free",
   "icons": [
     {
       "src": "favicon.ico",
