--- a/front-end/.env
+++ b/front-end/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=3666
+PUBLIC_URL=https://7b52f168ce08.ngrok.io
 REACT_APP_APP_URL=https://7b52f168ce08.ngrok.io
 REACT_APP_API_URL=http://localhost:8666
 REACT_APP_ENTITY_URL=http://localhost:8667
