--- a/front-end/.env.production
+++ b/front-end/.env.production
@@ -1,5 +1,6 @@
 NODE_ENV=prod
 PORT=443
+PUBLIC_URL=https://slink.sbs
 REACT_APP_APP_URL=https://slink.sbs
 REACT_APP_API_URL=https://slink.sbs
 REACT_APP_ENTITY_URL=https://slink.sbs
