--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -34,6 +34,7 @@ allprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		testImplementation 'org.springframework.security:spring-security-test'
 		implementation 'io.micrometer:micrometer-registry-prometheus'
+		implementation 'org.apache.ant:ant-compress:1.5'
 	}
 
 	test {
