add maxmindLicKey for site usage

--- a/back-end/scheduler/src/main/resources/application.properties
+++ b/back-end/scheduler/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8668
 appMode=local
 baseHost=https://91588fee5f2a.ngrok.io
+maxmindLicKey=mPbDQDtjRDCvW5j3
 spring.data.mongodb.database=request-shorter
