--- a/back-end/entity-api/src/main/resources/application.properties
+++ b/back-end/entity-api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8667
 appMode=local
 baseHost=https://7b52f168ce08.ngrok.io
+maxmindLicKey=mPbDQDtjRDCvW5j3
 spring.data.mongodb.database=request-shorter
