--- a/back-end/front-api/src/main/resources/application.properties
+++ b/back-end/front-api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8666
 appMode=local
 baseHost=https://7b52f168ce08.ngrok.io
+maxmindLicKey=mPbDQDtjRDCvW5j3
 spring.data.mongodb.database=request-shorter
 spring.data.mongodb.auto-index-creation=true
