--- a/infrastructure/gateway/docker-compose.yml
+++ b/infrastructure/gateway/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ../certbot/conf:/etc/letsencrypt
       - ../certbot/www:/var/www/certbot
     environment:
-      CHOKIDAR_USEPOLLING: true
+      - CHOKIDAR_USEPOLLING=true
     command: /bin/bash -c  "chmod +x /etc/nginx/*.sh && /etc/nginx/start-nginx.sh"
     logging:
       driver: "json-file"
