enable stspznv.men

--- a/infrastructure/gateway/port_host.env
+++ b/infrastructure/gateway/port_host.env
@@ -1,4 +1,5 @@
 CLIENT_STATIC_URL=http://localhost:1101
 API_SERVICE_URL=http://localhost:1102
 E_SERVICE_URL=http://localhost:1103
+STASP_MEN_URL=http://localhost:1901
 PORTAINER_URL=http://localhost:9000
