--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -17,7 +17,7 @@ jobs:
       REMOTE_PORT: ${{ secrets.DEPLOY_PORT }}
       ARGS: "-rltgoDzvO --delete"  
       SOURCE: "infrastructure/deploy/"
-      TARGET: "/root/app/deploy-prod/"    
+      TARGET: "/root/f/slink/deploy-prod/"    
     strategy:
           matrix:
             node-version: [15.x]
@@ -63,7 +63,7 @@ jobs:
       - name: Make PROD directory
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}
+          command: mkdir -p /root/f/slink/${{env.MODE}}
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -72,7 +72,7 @@ jobs:
       - name: Make image avatars directory
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}/files/img/avatars
+          command: mkdir -p /root/f/slink/${{env.MODE}}/files/img/avatars
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -89,7 +89,7 @@ jobs:
       - name: Make stage version directory
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -98,7 +98,7 @@ jobs:
       - name: Replace docker-compose
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/app/deploy-${{env.MODE}}/docker-compose-${{env.MODE}}.yml /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/docker-compose-${{env.MODE}}.yml /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -107,7 +107,7 @@ jobs:
       - name: Replace init-mongo.sh
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/app/deploy-${{env.MODE}}/init-mongo.sh /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/init-mongo.sh
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/init-mongo.sh /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/init-mongo.sh
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -134,7 +134,7 @@ jobs:
       - name: Replace front [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -143,7 +143,7 @@ jobs:
       - name: Replace front [2/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/app/deploy-${{env.MODE}}/front/build/* /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/front/build/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -152,7 +152,7 @@ jobs:
       - name: Replace gateway [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -161,7 +161,7 @@ jobs:
       - name: Replace gateway  [2/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/app/deploy-${{env.MODE}}/gateway/* /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/gateway/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -170,7 +170,7 @@ jobs:
       - name: Replace java [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -179,7 +179,7 @@ jobs:
       - name: Replace java [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/app/deploy-${{env.MODE}}/java/* /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/java/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -188,7 +188,7 @@ jobs:
       - name: Docker down
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: docker-compose -f /root/app/${{env.MODE}}/$(cat /root/app/${{env.MODE}}/current_version)/docker-compose.yml down || true
+          command: docker-compose -f /root/f/slink/${{env.MODE}}/$(cat /root/f/slink/${{env.MODE}}/current_version)/docker-compose.yml down || true
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -206,7 +206,7 @@ jobs:
       - name: Docker start
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: docker-compose -f /root/app/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml up -d
+          command: docker-compose -f /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml up -d
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -224,7 +224,7 @@ jobs:
       - name: Save previous version
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: echo $(cat /root/app/${{env.MODE}}/current_version)>/root/app/${{env.MODE}}/previous_version
+          command: echo $(cat /root/f/slink/${{env.MODE}}/current_version)>/root/f/slink/${{env.MODE}}/previous_version
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -233,7 +233,7 @@ jobs:
       - name: Save current worked version
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: echo ${{env.MODE}}_${{ github.run_number }}>/root/app/${{env.MODE}}/current_version
+          command: echo ${{env.MODE}}_${{ github.run_number }}>/root/f/slink/${{env.MODE}}/current_version
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -242,7 +242,7 @@ jobs:
       - name: Remove temp folder
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: rm -Rf /root/app/deploy-${{env.MODE}}
+          command: rm -Rf /root/f/slink/deploy-${{env.MODE}}
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
