update stack name

--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MODE: "prod"
+      STACK: "slink"
       working-back-dir: ./back-end
       working-front-dir: ./front-end
       SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
@@ -89,7 +90,7 @@ jobs:
       - name: Make stage version directory
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -98,7 +99,7 @@ jobs:
       - name: Replace docker-compose
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/docker-compose-${{env.MODE}}.yml /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/docker-compose-${{env.MODE}}.yml /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/docker-compose.yml
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -107,7 +108,7 @@ jobs:
       - name: Replace init-mongo.sh
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/init-mongo.sh /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/init-mongo.sh
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/init-mongo.sh /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/init-mongo.sh
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -134,7 +135,7 @@ jobs:
       - name: Replace front [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/front/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -143,7 +144,7 @@ jobs:
       - name: Replace front [2/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/front/build/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/front/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/front/build/* /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/front/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -152,7 +153,7 @@ jobs:
       - name: Replace gateway [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/gateway/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -161,7 +162,7 @@ jobs:
       - name: Replace gateway  [2/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/gateway/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/gateway/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/gateway/* /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/gateway/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -170,7 +171,7 @@ jobs:
       - name: Replace java [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
+          command: mkdir -p /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/java/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -179,7 +180,7 @@ jobs:
       - name: Replace java [1/2]
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/java/* /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/java/
+          command: cp -rf /root/f/slink/deploy-${{env.MODE}}/java/* /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/java/
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -206,7 +207,7 @@ jobs:
       - name: Docker start
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: docker compose -f /root/f/slink/${{env.MODE}}/${{env.MODE}}_${{ github.run_number }}/docker-compose.yml up -d
+          command: docker compose -f /root/f/slink/${{env.MODE}}/${{env.STACK}}_${{ github.run_number }}/docker-compose.yml up -d
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
@@ -233,7 +234,7 @@ jobs:
       - name: Save current worked version
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: echo ${{env.MODE}}_${{ github.run_number }}>/root/f/slink/${{env.MODE}}/current_version
+          command: echo ${{env.STACK}}_${{ github.run_number }}>/root/f/slink/${{env.MODE}}/current_version
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
