--- a/back-end/scheduler/src/main/resources/application.properties
+++ b/back-end/scheduler/src/main/resources/application.properties
@@ -3,3 +3,4 @@ appMode=local
 baseHost=https://91588fee5f2a.ngrok.io
 maxmindLicKey=mPbDQDtjRDCvW5j3
 spring.data.mongodb.database=request-shorter
+spring.cache.type=redis
