--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.codehaus.groovy:groovy'
