--- a/back-end/entity-api/src/main/resources/application.properties
+++ b/back-end/entity-api/src/main/resources/application.properties
@@ -3,3 +3,4 @@ appMode=local
 baseHost=https://7b52f168ce08.ngrok.io
 maxmindLicKey=mPbDQDtjRDCvW5j3
 spring.data.mongodb.database=request-shorter
+spring.cache.type=redis
