--- a/infrastructure/deploy/docker-compose-prod.yml
+++ b/infrastructure/deploy/docker-compose-prod.yml
@@ -45,8 +45,8 @@ services:
     environment:
       appMode: prod
       baseHost: https://slink.sbs
-      spring_data_mongodb_host: mongodb
-      spring_redis_host: redis
+      spring_data_mongodb_host: prod_mongodb
+      spring_redis_host: prod_redis
       geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
       geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/sh -c "cd /gjava && chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
@@ -72,8 +72,8 @@ services:
     environment:
       appMode: prod
       baseHost: https://slink.sbs
-      spring_data_mongodb_host: mongodb
-      spring_redis_host: redis
+      spring_data_mongodb_host: prod_mongodb
+      spring_redis_host: prod_redis
       geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
       geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/sh -c "cd /gjava && chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
@@ -99,8 +99,8 @@ services:
     environment:
       appMode: prod
       baseHost: https://slink.sbs
-      spring_data_mongodb_host: mongodb
-      spring_redis_host: redis
+      spring_data_mongodb_host: prod_mongodb
+      spring_redis_host: prod_redis
       geoLiteCountryDataBase: //gjava//GeoLite2//GeoLite2-Country//GeoLite2-Country.mmdb
       geoLiteCityDataBase: //gjava//GeoLite2//GeoLite2-City//GeoLite2-City.mmdb
     command: /bin/sh -c "cd /gjava && chmod +x /gjava/*.jar && java -jar /gjava/java.jar"
