--- a/infrastructure/deploy/docker-compose-prod.yml
+++ b/infrastructure/deploy/docker-compose-prod.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ../mongodb/data:/data/db
       - ./init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh
+    ports:
+      - "1201:27017"
     logging:
       driver: "json-file"
       options:
